backend/src/test/resources/application.properties
# Test configuration
quarkus.log.level=WARN

# Silence expected-error log noise from WeatherIngestionService tests.
# The `refreshForecasts continues after ... throws` and `backfillForGarden sets status FAILED`
# tests deliberately inject exceptions to verify error-path behaviour; they log by design.
quarkus.log.category."app.verdant.service.weather.WeatherIngestionService".level=OFF
